packages/kip-lang/src/parser.ts
import { tokenize } from './lexer.js'
import {
  Token,
  TokenType,
  isTrivia,
  isIdentifierLike,
  isAggregate
} from './token.js'
import type { Range, Position } from './token.js'
import type {
  Program,
  Statement,
  MutationClause,
  FindStatement,
  AsOfClause,
  ForTimeClause,
  EpistemicClause,
  OrderByClause,
  OrderItem,
  LimitClause,
  CursorClause,
  WhereClause,
  WherePattern,
  ConceptPattern,
  PropositionPattern,
  AssertionPattern,
  EvidencePattern,
  ActivityPattern,
  StructuralPattern,
  BeliefPattern,
  BeliefSlotPattern,
  SearchPattern,
  FilterClause,
  NotClause,
  OptionalClause,
  UnionClause,
  PropositionTuple,
  Term,
  PredicateAtom,
  RawPredicateExpression,
  PredicatePathAtom,
  PathQuantifier,
  ObjectPattern,
  MutateStatement,
  CreateConceptStatement,
  UpsertConceptStatement,
  EnsurePropositionStatement,
  AssertStatement,
  CreateEvidenceStatement,
  CreateAssertionStatement,
  CreateActivityStatement,
  TypeClause,
  ClientKeyClause,
  NameClause,
  MatchClause,
  SetFieldsClause,
  SetAttributesClause,
  SetFacetClause,
  UnsetAttributesClause,
  UnsetFacetClause,
  UnsetField,
  SetStructuralClause,
  StructuralAssignment,
  UnsetStructuralClause,
  StructuralRemoval,
  ExpectVersionClause,
  VersionPlane,
  UpdateStatement,
  UpdateAction,
  TransitionStatement,
  SetRetentionStatement,
  PurgeStatement,
  PurgePayloadStatement,
  MergeConceptStatement,
  DefineStatement,
  DescribeStatement,
  DescribeTargetKind,
  ListStatement,
  ListTargetKind,
  SearchStatement,
  SearchKind,
  VerifyStatement,
  VerifyTargetKind,
  ValidateStatement,
  ValidateTargetKind,
  PreviewStatement,
  HistoryStatement,
  ChangesStatement,
  ExportCapsuleStatement,
  Expression,
  FunctionCallExpr,
  AggregateExpr,
  FieldAccess,
  FieldStep,
  VariableRef,
  ParameterRef,
  StringLiteral,
  NumberLiteral,
  BooleanLiteral,
  NullLiteral,
  ScalarValue,
  SchemaSymbol,
  TargetRef,
  ArrayLiteral,
  ObjectLiteral,
  ObjectEntry
} from './ast.js'
import type { Diagnostic } from './diagnostics.js'

export interface ParseResult {
  ast: Program
  diagnostics: Diagnostic[]
}

/**
 * Which grammar owns the WHERE block being parsed.
 *
 * KQL owns the two reviewed divergences: `proposition_tuple` accepts raw
 * predicate path expressions, and `where_clause` additionally accepts
 * BELIEF / BELIEF SLOT. KML and META EXPORT get neither — a virtual
 * Projection can never be a mutation target or an export selector.
 */
type Dialect = 'kql' | 'raw'

/** The four baseline scalar types; arrays and objects are not Core Literals. */
type LiteralNode =
  | StringLiteral
  | NumberLiteral
  | BooleanLiteral
  | NullLiteral

export function parse(source: string): ParseResult {
  const allTokens = tokenize(source)
  const parser = new Parser(allTokens, source)
  return parser.parse()
}

class Parser {
  private tokens: Token[]
  private pos: number = 0
  private diagnostics: Diagnostic[] = []
  private source: string
  private dialect: Dialect = 'kql'

  constructor(tokens: Token[], source: string) {
    // Filter out trivia for parsing, but keep comments for attachment later
    this.tokens = tokens.filter(
      (t) => !isTrivia(t.type) || t.type === TokenType.Comment
    )
    this.source = source
  }

  parse(): ParseResult {
    const statements: Statement[] = []
    const start = this.currentPos()
    this.skipComments()
    while (!this.isAtEnd()) {
      const before = this.pos
      this.skipComments()
      if (this.isAtEnd()) break
      try {
        const stmt = this.parseStatement()
        if (stmt) statements.push(stmt)
      } catch {
        // Error recovery: skip to next statement-level keyword
        this.recoverToNextStatement()
      }
      // A sub-parser that rejects its first token reports and returns
      // without consuming it, so a loop keyed on that token would spin
      // forever building diagnostics. Stop as soon as nothing moved.
      if (this.pos === before) break
    }
    const end = this.currentPos()
    return {
      ast: { kind: 'Program', statements, range: { start, end } },
      diagnostics: this.diagnostics
    }
  }

  // ────────────────────────────────────────────────────────────────────
  //  Statement dispatch
  // ────────────────────────────────────────────────────────────────────

  private parseStatement(): Statement | null {
    const tok = this.current()
    switch (tok.type) {
      // KQL
      case TokenType.Find:
        return this.parseFindStatement()

      // KML
      case TokenType.Mutate:
        return this.parseMutateStatement()
      case TokenType.Create:
      case TokenType.Upsert:
      case TokenType.Ensure:
      case TokenType.Assert:
      case TokenType.Update:
      case TokenType.Transition:
      case TokenType.Set:
      case TokenType.Purge:
      case TokenType.Merge:
      case TokenType.Define:
        return this.parseMutationClause()

      // META
      case TokenType.Describe:
        return this.parseDescribeStatement()
      case TokenType.List:
        return this.parseListStatement()
      case TokenType.Search:
        return this.parseSearchStatement()
      case TokenType.Verify:
        return this.parseVerifyStatement()
      case TokenType.Validate:
        return this.parseValidateStatement()
      case TokenType.Preview:
        return this.parsePreviewStatement()
      case TokenType.History:
        return this.parseHistoryStatement()
      case TokenType.Changes:
        return this.parseChangesStatement()
      case TokenType.Export:
        return this.parseExportCapsuleStatement()

      default:
        this.error(
          `Unexpected token '${tok.value}': expected a KQL, KML or META statement`,
          tok
        )
        return null
    }
  }

  /** Every mutation legal at statement level and inside `MUTATE { ... }`. */
  private parseMutationClause(): MutationClause {
    const tok = this.current()
    switch (tok.type) {
      case TokenType.Create:
        return this.parseCreateStatement()
      case TokenType.Upsert:
        return this.parseUpsertConcept()
      case TokenType.Ensure:
        return this.parseEnsureProposition()
      case TokenType.Assert:
        return this.parseAssertStatement()
      case TokenType.Update:
        return this.parseUpdateStatement()
      case TokenType.Transition:
        return this.parseTransitionStatement()
      case TokenType.Set:
        return this.parseSetRetention()
      case TokenType.Purge:
        return this.parsePurgeStatement()
      case TokenType.Merge:
        return this.parseMergeConcept()
      case TokenType.Define:
        return this.parseDefineStatement()
      default:
        this.error(`Unexpected token '${tok.value}': expected a KML mutation`, tok)
        throw new ParseAbort()
    }
  }

  // ────────────────────────────────────────────────────────────────────
  //  KQL — FIND
  // ────────────────────────────────────────────────────────────────────

  private parseFindStatement(): FindStatement {
    const leadingComments = this.collectLeadingComments()
    const start = this.currentPos()
    this.dialect = 'kql'
    this.expect(TokenType.Find)
    this.expect(TokenType.LParen)

    const projections: Expression[] = []
    if (!this.check(TokenType.RParen)) {
      do {
        projections.push(this.parseProjectionExpression())
      } while (this.match(TokenType.Comma))
    }
    if (projections.length === 0) {
      this.error('FIND requires at least one projection', this.current())
    }
    this.expect(TokenType.RParen)

    this.expectKeywordWithSpace(TokenType.Where)
    const where = this.parseWhereClause()

    let asOf: AsOfClause | undefined
    let forTime: ForTimeClause | undefined
    let epistemic: EpistemicClause | undefined
    let orderBy: OrderByClause | undefined
    let limit: LimitClause | undefined
    let cursor: CursorClause | undefined
    let lastClauseOrder = -1

    // The grammar fixes this order. Accepting any order here would let a
    // command run on this parser that a conformant engine rejects, so each
    // clause is taken once and out-of-order repeats are reported.
    for (;;) {
      const tok = this.current()
      if (this.check(TokenType.As)) {
        lastClauseOrder = this.checkClauseOrder(0, lastClauseOrder, 'AS OF', tok)
        this.rejectRepeat(asOf, 'AS OF', tok)
        asOf = this.parseAsOfClause()
      } else if (this.check(TokenType.For)) {
        lastClauseOrder = this.checkClauseOrder(
          1,
          lastClauseOrder,
          'FOR TIME',
          tok
        )
        this.rejectRepeat(forTime, 'FOR TIME', tok)
        forTime = this.parseForTimeClause()
      } else if (this.check(TokenType.With)) {
        lastClauseOrder = this.checkClauseOrder(
          2,
          lastClauseOrder,
          'WITH EPISTEMIC',
          tok
        )
        this.rejectRepeat(epistemic, 'WITH EPISTEMIC', tok)
        epistemic = this.parseEpistemicClause()
      } else if (this.check(TokenType.Order)) {
        lastClauseOrder = this.checkClauseOrder(
          3,
          lastClauseOrder,
          'ORDER BY',
          tok
        )
        this.rejectRepeat(orderBy, 'ORDER BY', tok)
        orderBy = this.parseOrderBy()
      } else if (this.check(TokenType.Limit)) {
        lastClauseOrder = this.checkClauseOrder(4, lastClauseOrder, 'LIMIT', tok)
        this.rejectRepeat(limit, 'LIMIT', tok)
        limit = this.parseLimitClause()
      } else if (this.check(TokenType.Cursor)) {
        lastClauseOrder = this.checkClauseOrder(5, lastClauseOrder, 'CURSOR', tok)
        this.rejectRepeat(cursor, 'CURSOR', tok)
        cursor = this.parseCursorClause()
      } else {
        break
      }
    }

    return {
      kind: 'FindStatement',
      projections,
      where,
      asOf,
      forTime,
      epistemic,
      orderBy,
      limit,
      cursor,
      range: { start, end: this.endPos() },
      leadingComments: leadingComments.length ? leadingComments : undefined
    }
  }

  /** `projection_expression = aggregate_expression | expression` */
  private parseProjectionExpression(): Expression {
    return this.parseExpression()
  }

  private parseAsOfClause(): AsOfClause {
    const start = this.currentPos()
    const first = this.expect(TokenType.As)
    this.expectSecondWord(TokenType.Of, first)
    // Cognitive time is a sequence coordinate. A transaction id or an instant
    // is resolved to one first (DESCRIBE TRANSACTION / DESCRIBE SNAPSHOT AT
    // TIME), so the read names the sequence it actually ran against.
    if (!this.match(TokenType.Seq)) {
      this.error(
        `Expected SEQ after AS OF but got '${this.current().value}'`,
        this.current()
      )
    }
    const value = this.parseScalarValue()
    return {
      kind: 'AsOfClause',
      value,
      range: { start, end: this.endPos() }
    }
  }

  private parseForTimeClause(): ForTimeClause {
    const start = this.currentPos()
    const first = this.expect(TokenType.For)
    this.expectSecondWord(TokenType.Time, first)
    const value = this.parseScalarValue()
    return {
      kind: 'ForTimeClause',
      value,
      range: { start, end: this.endPos() }
    }
  }

  private parseEpistemicClause(): EpistemicClause {
    const start = this.currentPos()
    const first = this.expect(TokenType.With)
    this.expectSecondWord(TokenType.Epistemic, first)
    const options = this.parseObjectLiteral()
    return {
      kind: 'EpistemicClause',
      options,
      range: { start, end: this.endPos() }
    }
  }

  private parseOrderBy(): OrderByClause {
    const start = this.currentPos()
    const first = this.expect(TokenType.Order)
    this.expectSecondWord(TokenType.By, first)

    const items: OrderItem[] = []
    do {
      items.push(this.parseOrderItem())
    } while (this.match(TokenType.Comma))

    return {
      kind: 'OrderByClause',
      items,
      range: { start, end: this.endPos() }
    }
  }

  private parseOrderItem(): OrderItem {
    const start = this.currentPos()
    const expression = this.parseProjectionExpression()
    let direction: 'ASC' | 'DESC' | undefined
    if (this.match(TokenType.Asc)) direction = 'ASC'
    else if (this.match(TokenType.Desc)) direction = 'DESC'
    return {
      kind: 'OrderItem',
      expression,
      direction,
      range: { start, end: this.endPos() }
    }
  }

  private parseLimitClause(): LimitClause {
    const start = this.currentPos()
    this.expect(TokenType.Limit)
    const value = this.parseScalarValue()
    return {
      kind: 'LimitClause',
      value,
      range: { start, end: this.endPos() }
    }
  }

  private parseCursorClause(): CursorClause {
    const start = this.currentPos()
    this.expect(TokenType.Cursor)
    const value = this.parseScalarValue()
    return {
      kind: 'CursorClause',
      value,
      range: { start, end: this.endPos() }
    }
  }

  // ────────────────────────────────────────────────────────────────────
  //  WHERE
  // ────────────────────────────────────────────────────────────────────

  private parseWhereClause(): WhereClause {
    const start = this.currentPos()
    this.expect(TokenType.LBrace)
    const patterns = this.parseWherePatterns()
    this.expect(TokenType.RBrace)
    return {
      kind: 'WhereClause',
      patterns,
      range: { start, end: this.endPos() }
    }
  }

  private parseWherePatterns(): WherePattern[] {
    const patterns: WherePattern[] = []
    while (!this.check(TokenType.RBrace) && !this.isAtEnd()) {
      const before = this.pos
      const pattern = this.parseWherePattern()
      if (pattern) patterns.push(pattern)
      if (this.pos === before) break
      // WHERE items are whitespace-delimited; a comma between them is not
      // grammar, so report it rather than silently accepting both spellings.
      if (this.check(TokenType.Comma)) {
        this.error(
          'WHERE items are separated by whitespace, not commas',
          this.current()
        )
        this.advance()
      }
    }
    return patterns
  }

  private parseWherePattern(): WherePattern | null {
    const tok = this.current()
    switch (tok.type) {
      case TokenType.Variable:
        return this.parseVariableLeadingPattern()
      case TokenType.LParen:
      case TokenType.Proposition:
        return this.parsePropositionPattern(undefined)
      case TokenType.Structural:
        return this.parseStructuralPattern(undefined)
      case TokenType.Filter:
        return this.parseFilterClause()
      case TokenType.Not:
        return this.parseNotClause()
      case TokenType.Optional:
        return this.parseOptionalClause()
      case TokenType.Union:
        return this.parseUnionClause()
      default:
        this.error(`Unexpected token '${tok.value}' in WHERE block`, tok)
        this.advance()
        return null
    }
  }

  /**
   * Disambiguates the pattern families that all begin with a variable.
   *
   * `?x {`/`?x CONCEPT {` is a Concept, `?x (`/`?x PROPOSITION (` a raw
   * Proposition, and the remaining families name their kind outright.
   */
  private parseVariableLeadingPattern(): WherePattern {
    const variable = this.parseVariableRef()
    const tok = this.current()

    switch (tok.type) {
      case TokenType.LBrace:
      case TokenType.Concept:
        return this.parseConceptPattern(variable)
      case TokenType.LParen:
      case TokenType.Proposition:
        return this.parsePropositionPattern(variable)
      case TokenType.Assertion:
        return this.parseAssertionPattern(variable)
      case TokenType.Evidence:
        return this.parseEvidencePattern(variable)
      case TokenType.Activity:
        return this.parseActivityPattern(variable)
      case TokenType.Structural:
        return this.parseStructuralPattern(variable)
      case TokenType.Belief:
        return this.parseBeliefPattern(variable)
      case TokenType.Search:
        return this.parseSearchPattern(variable)
      default:
        this.error(
          `Expected a pattern body after ${variable.name} but got '${tok.value}'`,
          tok
        )
        throw new ParseAbort()
    }
  }

  private parseConceptPattern(variable: VariableRef): ConceptPattern {
    const explicit = this.match(TokenType.Concept)
    const matcher = this.parseObjectPattern()
    return {
      kind: 'ConceptPattern',
      variable,
      explicit,
      matcher,
      range: { start: variable.range.start, end: this.endPos() }
    }
  }

  private parsePropositionPattern(
    variable: VariableRef | undefined
  ): PropositionPattern {
    const start = variable ? variable.range.start : this.currentPos()
    const explicit = this.match(TokenType.Proposition)
    const tuple = this.parsePropositionTuple()
    return {
      kind: 'PropositionPattern',
      variable,
      explicit,
      tuple,
      range: { start, end: this.endPos() }
    }
  }

  private parseAssertionPattern(variable: VariableRef): AssertionPattern {
    this.expect(TokenType.Assertion)
    const matcher = this.parseObjectPattern()
    return {
      kind: 'AssertionPattern',
      variable,
      matcher,
      range: { start: variable.range.start, end: this.endPos() }
    }
  }

  private parseEvidencePattern(variable: VariableRef): EvidencePattern {
    this.expect(TokenType.Evidence)
    const matcher = this.parseObjectPattern()
    return {
      kind: 'EvidencePattern',
      variable,
      matcher,
      range: { start: variable.range.start, end: this.endPos() }
    }
  }

  private parseActivityPattern(variable: VariableRef): ActivityPattern {
    this.expect(TokenType.Activity)
    const matcher = this.parseObjectPattern()
    return {
      kind: 'ActivityPattern',
      variable,
      matcher,
      range: { start: variable.range.start, end: this.endPos() }
    }
  }

  private parseStructuralPattern(
    variable: VariableRef | undefined
  ): StructuralPattern {
    const start = variable ? variable.range.start : this.currentPos()
    this.expect(TokenType.Structural)
    this.expect(TokenType.LParen)
    const subject = this.parseTerm()
    this.expect(TokenType.Comma)
    const field = this.parseSchemaSymbol()
    this.expect(TokenType.Comma)
    const object = this.parseTerm()
    this.expect(TokenType.RParen)
    return {
      kind: 'StructuralPattern',
      variable,
      subject,
      field,
      object,
      range: { start, end: this.endPos() }
    }
  }

  private parseBeliefPattern(
    variable: VariableRef
  ): BeliefPattern | BeliefSlotPattern {
    const start = variable.range.start
    const beliefTok = this.expect(TokenType.Belief)

    // `BELIEF SLOT (...)` — the whole functional slot, not one tuple.
    if (this.check(TokenType.Slot)) {
      this.expectSecondWord(TokenType.Slot, beliefTok)
      this.expect(TokenType.LParen)
      const subject = this.parseTerm()
      this.expect(TokenType.Comma)
      const predicate = this.parsePredicateAtom()
      this.expect(TokenType.RParen)
      this.rejectBeliefInRawDialect(start)
      return {
        kind: 'BeliefSlotPattern',
        variable,
        subject,
        predicate,
        range: { start, end: this.endPos() }
      }
    }

    this.expect(TokenType.LParen)

    // `BELIEF (?p)` projects an already-bound Proposition; `BELIEF (s, p, o)`
    // projects a tuple. Only a lone variable followed by `)` is the former.
    if (this.check(TokenType.Variable) && this.peekPast(1)?.type === TokenType.RParen) {
      const proposition = this.parseVariableRef()
      this.expect(TokenType.RParen)
      this.rejectBeliefInRawDialect(start)
      return {
        kind: 'BeliefPattern',
        variable,
        proposition,
        range: { start, end: this.endPos() }
      }
    }

    // `BELIEF (id: ...)` — the operand is the Proposition expression slot, so
    // the same id form that names a Proposition in a pattern names it here
    // (Spec §43.2 / §46.1). Same recognition rule as parsePropositionTuple.
    if (this.isPropositionIdStart()) {
      this.advance() // id
      this.advance() // :
      const propositionId = this.parseScalarValue()
      this.expect(TokenType.RParen)
      this.rejectBeliefInRawDialect(start)
      return {
        kind: 'BeliefPattern',
        variable,
        propositionId,
        range: { start, end: this.endPos() }
      }
    }

    // `BELIEF (:p)` is the one spelling a reader might reach for that means
    // nothing: a lone parameter is not a bound variable and not an id
    // reference. Say what the reference form is instead of "expected ','",
    // and recover as if the id form had been written so nothing cascades.
    if (this.check(TokenType.Parameter) && this.peekPast(1)?.type === TokenType.RParen) {
      const param = this.current()
      this.error(
        `BELIEF (${param.value}) is not a form: name the Proposition by (id: ${param.value}), or bind it first and write BELIEF (?p)`,
        param
      )
      const propositionId = this.parseParameterRef()
      this.expect(TokenType.RParen)
      this.rejectBeliefInRawDialect(start)
      return {
        kind: 'BeliefPattern',
        variable,
        propositionId,
        range: { start, end: this.endPos() }
      }
    }

    const subject = this.parseTerm()
    this.expect(TokenType.Comma)
    const predicate = this.parsePredicateAtom()
    this.expect(TokenType.Comma)
    const object = this.parseTerm()
    this.expect(TokenType.RParen)
    this.rejectBeliefInRawDialect(start)
    return {
      kind: 'BeliefPattern',
      variable,
      subject,
      predicate,
      object,
      range: { start, end: this.endPos() }
    }
  }

  /**
   * BELIEF is an Epistemic Projection: virtual, read-only, and derived from a
   * policy. KML excludes it because a Projection can never be a mutation
   * target; EXPORT excludes it because a capsule carries records, not
   * interpretations.
   */
  private rejectBeliefInRawDialect(start: Position): void {
    if (this.dialect === 'raw') {
      this.diagnostics.push({
        range: { start, end: this.endPos() },
        severity: 'error',
        message:
          'BELIEF is a read-only Epistemic Projection and cannot appear in a mutation or export selection',
        code: 'KIP_1001'
      })
    }
  }

  private parseFilterClause(): FilterClause {
    const start = this.currentPos()
    this.expect(TokenType.Filter)
    this.expect(TokenType.LParen)
    const expression = this.parseExpression()
    this.expect(TokenType.RParen)
    return {
      kind: 'FilterClause',
      expression,
      range: { start, end: this.endPos() }
    }
  }

  private parseNotClause(): NotClause {
    const start = this.currentPos()
    this.expect(TokenType.Not)
    this.expect(TokenType.LBrace)
    const patterns = this.parseWherePatterns()
    this.expect(TokenType.RBrace)
    // A search miss never proves absence (Spec §66.6), so a Search Pattern
    // cannot be the thing NOT tests for.
    const visit = (list: WherePattern[]): void => {
      for (const pattern of list) {
        if (pattern.kind === 'SearchPattern') {
          this.diagnostics.push({
            range: pattern.range,
            severity: 'error',
            message: 'a Search Pattern cannot appear inside NOT: a search miss never proves absence',
            code: 'KIP_1001'
          })
        } else if (pattern.kind === 'OptionalClause' || pattern.kind === 'UnionClause') {
          visit(pattern.patterns)
        }
      }
    }
    visit(patterns)
    return {
      kind: 'NotClause',
      patterns,
      range: { start, end: this.endPos() }
    }
  }

  private parseOptionalClause(): OptionalClause {
    const start = this.currentPos()
    this.expect(TokenType.Optional)
    this.expect(TokenType.LBrace)
    const patterns = this.parseWherePatterns()
    this.expect(TokenType.RBrace)
    return {
      kind: 'OptionalClause',
      patterns,
      range: { start, end: this.endPos() }
    }
  }

  private parseUnionClause(): UnionClause {
    const start = this.currentPos()
    this.expect(TokenType.Union)
    this.expect(TokenType.LBrace)
    const patterns = this.parseWherePatterns()
    this.expect(TokenType.RBrace)
    return {
      kind: 'UnionClause',
      patterns,
      range: { start, end: this.endPos() }
    }
  }

  // ────────────────────────────────────────────────────────────────────
  //  Raw semantic tuples
  // ────────────────────────────────────────────────────────────────────

  private parsePropositionTuple(): PropositionTuple {
    const start = this.currentPos()
    this.expect(TokenType.LParen)
